# datathon-helicopter

./: .env.example  .gitignore  AGENTS.md  CONVENTIONS.md  EVIDENCE_ENHANCEMENT_PLAN.md  Makefile  README.md  netlify.toml  pyproject.toml
.github/workflows/: deploy-evidence.yml
audit/: __main__.py  data_quality.py  feature_analysis.py  feature_selection.py  mart_validation.py  report.py
configs/: competition.yaml  features.yaml  modeling.yaml  raw_tables.yaml  tracking.yaml
configs/tuned/: lightgbm.yaml
data/submissions/: best_submission.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/seeds/: seeds.yml  tet_dates.csv
dbt/tests/: test_inventory_ratio_bounds.sql  test_mart_monthly_category_performance_unique_grain.sql  test_mart_monthly_product_health_unique_grain.sql  test_mart_weekly_region_performance_unique_grain.sql  test_order_items_promotions_integrity.sql  test_orders_payments_1_to_1.sql  test_products_cogs_lt_price.sql  test_returns_date_consistency.sql  test_returns_status_constraint.sql  test_reviews_date_consistency.sql  test_reviews_status_constraint.sql  test_shipments_date_consistency.sql  test_shipments_status_constraint.sql  test_web_traffic_consistency.sql
notebooks/: 01_shap_explainability.ipynb
reports/evidence/: .gitignore  CONVENTIONS.md  README.md  evidence.config.yaml  package-lock.json  package.json  (+1 more)
tests/: test_baselines.py  test_config.py  test_cv.py  test_data_loaders.py  test_explainer.py  test_forecasters.py  test_lag_features.py  test_log_transform.py  test_recursive.py  test_trainer.py  test_tuner.py
(+266 files in other folders)
