[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datathon-round1-skeleton"
version = "0.1.0"
description = "Analytics and forecasting project skeleton"
requires-python = ">=3.11,<3.12"
dependencies = [
  "dbt-duckdb>=1.8.0",
  "duckdb>=1.0.0",
  "kaggle>=1.7.0",
  "lightgbm>=4.3.0",
  "matplotlib>=3.7.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "pyarrow>=15.0.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "catboost>=1.2.0",
  "scikit-learn>=1.4.0",
  "seaborn>=0.13.0",
  "shap>=0.45.0",
  "xgboost>=2.0.0",
  "optuna>=4.8.0",
  "mlflow>=2.15.0",
]

[project.scripts]
datathon = "datathon.cli:main"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
